# solagent-ai

./: Cargo.toml  README.md
scripts/: init_table.sql
src/: db.rs  lib.rs  nlp.rs  v11n.rs
